frontend/test/should_pass/edge_model_005.gm
abstract edge class A extends AEdge;
