frontend/test/should_fail/edge_model_003.gm
edge class A extends Edge;
edge class AA extends A;

undirected edge class B extends Edge;
undirected edge class BB extends B;

edge class C extends AA,BB;